WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119269
Page for WKPageLoaderClient processDidCrash callback always reports a process identifier of 0
https://bugs.webkit.org/show_bug.cgi?id=119269
Summary
Page for WKPageLoaderClient processDidCrash callback always reports a process...
Jeff Miller
Reported
2013-07-30 11:08:01 PDT
Page for WKPageLoaderClient processDidCrash callback always reports a process identifier of 0
Attachments
Patch
(1.28 KB, patch)
2013-07-30 11:11 PDT
,
Jeff Miller
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jeff Miller
Comment 1
2013-07-30 11:09:17 PDT
<
rdar://problem/14582393
>
Jeff Miller
Comment 2
2013-07-30 11:11:45 PDT
Created
attachment 207749
[details]
Patch
Jeff Miller
Comment 3
2013-07-30 11:22:14 PDT
I will add the radar bug number to the ChangeLog before landing.
Jeff Miller
Comment 4
2013-07-30 11:27:57 PDT
Committed
r153482
.
http://trac.webkit.org/changeset/153482
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug