Page for WKPageLoaderClient processDidCrash callback always reports a process identifier of 0 https://bugs.webkit.org/show_bug.cgi?id=119269 <rdar://problem/14582393>

Reviewed by Anders Carlsson.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processIdentifier):
Return 0 if the page is closed instead of requiring isValid().

Canonical link: https://commits.webkit.org/137247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153482 268f45cc-cd09-0410-ab3c-d52691b4dbfc